// Copyright 2022 The ChromiumOS Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

option optimize_for = LITE_RUNTIME;

package hwsec;

message OobeConfigEncryptedData {
  uint32 version = 1;
  bytes iv = 2;
  bytes tag = 3;
  bytes ciphertext = 4;
}
